[package]
name = "photography"
version = "0.1.0"
edition = "2021"
rust-version = "1.81"

[dependencies]
async-nats = "0.35.1"
color-eyre = "0.6.3"
tokio = { version = "1.38.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
xmp_toolkit = "1.7.3"
futures = "0.3.30"
notify-debouncer-full = "0.3.1"
bytes = "1.6.0"
bincode = "1.3.3"
serde = { version = "1.0.203", features = ["derive"] }
clap = { version = "4.5.7", features = ["derive"] }
rexiv2 = "0.10.0"
time = { version = "0.3.36", features = ["macros"] }
simple-c2pa = { version = "0.0.14", path = "../simple-c2pa" }
walkdir = "2.5.0"
vfs = { version = "0.12.0", features = ["async-vfs", "tokio"] }
file-lock = "2.1.11"
c2pa = { version = "0.32.1", features = ["file_io", "unstable_api"], path = "/run/media/marcel/1ac60e61-e5e2-4157-9a7a-830801a3fb0b/projects/c2pa-rs/sdk" }
